--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body{
+  width: 70%;
+  margin: 20% auto;
+
+}
 .App {
   text-align: center;
 }
@@ -36,3 +41,5 @@
     transform: rotate(360deg);
   }
 }
+
+
